# Algos-Homework

./: .gitignore  2_3.cpp  3_2.cpp  7_2.cpp
Module 1/: 1_3.cpp  4_1.cpp  5_4.cpp  6_1.cpp  7_2.cpp
Module 2/: 1_1.cpp  1_1_generator.cpp  2_4.cpp  4_1.cpp
Module 3/: 2.cpp  3.cpp  4.cpp
Module 3/1/: CMakeLists.txt  input.txt  main.cpp
Module 3/1/graphs/: CMakeLists.txt
Module 3/1/graphs/include/: ArcGraph.hpp  IGraph.hpp  ListGraph.hpp  MatrixGraph.hpp  SetGraph.hpp  graphs.hpp
Module 3/1/graphs/src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp
